crates/squawk_parser/src/snapshots/parser__test__create_database_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/create_database.sql
---
SOURCE_FILE
  COMMENT "-- simple"
  WHITESPACE "\n"
  CREATE_DATABASE_STMT
    CREATE_KW "create"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    NAME
      IDENT "d"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- full"
  WHITESPACE "\n"
  CREATE_DATABASE_STMT
    CREATE_KW "create"
    WHITESPACE " "
    DATABASE_KW "database"
    WHITESPACE " "
    NAME
      IDENT "d"
    WHITESPACE "\n  "
    WITH_KW "with"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    WHITESPACE "\n  "
    TEMPLATE_KW "template"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    WHITESPACE "\n  "
    ENCODING_KW "encoding"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'utf-8'"
    WHITESPACE "\n  "
    IDENT "strategy"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    IDENT "locale"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'fr_FR'"
    WHITESPACE "\n  "
    IDENT "lc_collate"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'fr_FR'"
    WHITESPACE "\n  "
    IDENT "lc_ctyep"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    IDENT "builtin_locale"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'en'"
    WHITESPACE "\n  "
    IDENT "icu_locale"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'en'"
    WHITESPACE "\n  "
    IDENT "icu_rules"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "''"
    WHITESPACE "\n  "
    IDENT "locale_provider"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'./foo/bar'"
    WHITESPACE "\n  "
    IDENT "collation_version"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      INT_NUMBER "10"
    WHITESPACE "\n  "
    TABLESPACE_KW "tablespace"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    FULL_KW "full"
    WHITESPACE "\n  "
    IDENT "allow_connections"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      FALSE_KW "false"
    WHITESPACE "\n  "
    CONNECTION_KW "connection"
    WHITESPACE " "
    LIMIT_KW "limit"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      INT_NUMBER "1000"
    WHITESPACE "\n  "
    IDENT "is_template"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      FALSE_KW "false"
    WHITESPACE "\n  "
    IDENT "oid"
    WHITESPACE " "
    LITERAL
      INT_NUMBER "1010"
  SEMICOLON ";"
  WHITESPACE "\n\n"
